# pt2-data-sctrustures-and-data-transformations

./: job_crawling.ipynb  jobs.duckdb  pyproject.toml
