[project]
name = "pt2-data-sctrustures-and-data-transformations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "scrapingbee>=2.0.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.7.1"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
